--- a/example/src/index.css
+++ b/example/src/index.css
@@ -16,3 +16,34 @@ code {
 html, body, #root, .App {
   height: 100%;
 }
+
+.wrapper {
+	max-width: 50rem;
+	margin: 1rem auto;
+	padding: .2rem 1rem;
+	
+	border: 2px solid #444;
+	background: rgba(#444,.2);
+}
+
+.pen_info {
+	margin: 1rem 0;
+	padding: 0 1rem;
+	border: 2px solid #60a7dc;
+	border-radius: .4rem;
+	background: rgba(#60a7dc,.5);
+}
+
+.dropzone {
+	box-sizing: border-box;
+	display: none;
+	position: fixed;
+	width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+
+	background: rgba(#60a7dc,.8);
+	border: 11px dashed #60a7dc;
+}
