--- a/example/src/index.css
+++ b/example/src/index.css
@@ -47,3 +47,24 @@ html, body, #root, .App {
 	background: rgba(#60a7dc,.8);
 	border: 11px dashed #60a7dc;
 }
+
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #000;
+	color: #fff;
+}
+
+.site-layout .site-layout-background h1 {
+	color: #fff;
+  margin-left: 2vh;
+}
+
+.site-layout .site-layout-background h2 {
+	color: #fff;
+  margin-left: 2vh;
+}
